Conectado con el websocket para actualizaciones en tiempo real

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     "app/workspaces/[workspaceId]/layout.js",
     "app/page.jsx",
     "app/layout.jsx",
-    "lib/utils.js"
+    "lib/utils.js",
+    "components/collections/collections-list.jsx"
   ],
   "exclude": ["node_modules"]
 }
