--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.4.7",
     "jsonwebtoken": "^9.0.2",
     "lowlight": "^3.3.0",
