--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
@@ -62,10 +63,12 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-dom-confetti": "^0.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.0.0",
     "react-quill": "^2.0.0",
