Mejora completa de UI, implementación de tareas, agregadas tareas a la bd, fix de bugs.

--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "react-dom": "^19.0.0",
     "react-dom-confetti": "^0.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.0.0",
     "react-quill": "^2.0.0",
+    "react-virtuoso": "^4.12.6",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
     "socket.io": "^4.8.1",
