--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
+    "@studio-freight/lenis": "^1.0.42",
     "@tiptap/extension-code-block": "^2.11.5",
     "@tiptap/extension-code-block-lowlight": "^2.11.5",
     "@tiptap/extension-collaboration": "^2.11.5",
@@ -55,7 +58,11 @@
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.4.7",
+    "gsap": "^3.12.7",
+    "howler": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lenis": "^1.3.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
@@ -71,7 +78,7 @@
     "react-dom-confetti": "^0.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-markdown": "^10.0.0",
+    "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "react-virtuoso": "^4.12.6",
     "recharts": "^2.15.1",
@@ -81,6 +88,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "ws": "^8.18.1",
     "y-prosemirror": "^1.2.17",
     "y-websocket": "^2.1.0",
