--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "yjs-server": "node y-websocket-server.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-markdown": "^6.3.2",
+    "@codemirror/language": "^6.11.0",
+    "@codemirror/language-data": "^6.5.1",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.37.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -91,6 +100,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "ws": "^8.18.1",
+    "y-codemirror.next": "^0.3.5",
     "y-prosemirror": "^1.2.17",
     "y-websocket": "^2.1.0",
     "yjs": "^13.6.24",
