--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-pdf/renderer": "^4.3.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@studio-freight/lenis": "^1.0.42",
@@ -70,7 +71,9 @@
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "howler": "^2.2.4",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lenis": "^1.3.1",
     "lowlight": "^3.3.0",
@@ -101,7 +104,7 @@
     "three": "^0.176.0",
     "ws": "^8.18.1",
     "y-codemirror.next": "^0.3.5",
-    "y-prosemirror": "^1.2.17",
+    "y-prosemirror": "^1.3.5",
     "y-websocket": "^2.1.0",
     "yjs": "^13.6.24",
     "zustand": "^5.0.3"
